--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
         <meta name="keywords" content="суши, Томск, Тема, доставка суши, бесплатная, роллы, Россия, Калифорния, кушать, заказать">
+        <meta name="google-site-verification" content="google-site-verification: google0bbf272173c15fc1.html">
         <title>Sushi Tema Tomsk, Суши Тема Томск</title>
     </head>
     <body>
