--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </nav>
             <div class="hero-text-box">
-                <h1>Будь всегда в ТЕМЕ.<br>2 страны и 21 городов.<br>Бесплатная доставка</h1>
+                <h1>Будь всегда в ТЕМЕ.<br>2 страны и 21 городов.<br>Бесплатная доставка.</h1>
                 <a class="btn btn-full js--scroll-to-plans" href="#" title="Order Now!">Я голоден!</a>
             </div>
         
