--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
                     <img src="resources/images/logo.png" alt="Omnifood logo" title="OmniFood" class="logo-black">
                     <ul class="main-nav js--main-nav">
                         <li><a href="#features">О нас</a></li>
-                        <li><a href="#works">Ассортимент</a></li>
-                        <li><a href="#cities">Адрес</a></li>
-                        <li><a href="#plans">Контакты</a></li>
+                        <li><a href="#cities">Ассортимент</a></li>
+                        <li><a href="#adres">Адрес</a></li>
+                        <li><a href="#adres">Контакты</a></li>
                     </ul>
                     <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
                 </div>
             </nav>
             <div class="hero-text-box">
-                <h1>Будь всегда в ТЕМЕ.<br>2 страны и 21 городов.<br>Бесплатная доставка.</h1>
-                <a class="btn btn-full js--scroll-to-plans" href="#" title="Order Now!">Я голоден!</a>
+                <h1>Будь всегда в ТЕМЕ.<br>2 страны и 21 городов.</h1>
+                <h1 style="color:orange;">Бесплатная доставка</h1>
+                <a class="btn btn-full js--scroll-to-plans" href="#cities" title="Order Now!">Я голоден!</a>
             </div>
         
         </header>
@@ -147,10 +148,60 @@
                         Краб темпура 10 шт.<br>Цезарь 10 шт.<br>Саке маки 10 шт.<br>Аляска 5 шт.<br>Филадельфия 10 шт.<br>Калифорния 5 шт.<br>Маргарита.<br>
                     </div>
                 </div>
+                <div class="col span-1-of-4 box">
+                    <img src="resources/images/romeo.jpg" alt="ROMEO">
+                    <h3>Сет "Ромео"</h3>
+                    <div class="city-future">
+                        Цена: 800 руб.
+                    </div>
+                    <div class="city-future">
+                        Филагриль 10 шт.<br>Цезарь 10 шт.<br>Филадельфия 10 шт.<br>4 сезона.<br>Крылышки 5шт.<br>
+                    </div>
+                </div>
+                <div class="col span-1-of-4 box">
+                    <img src="resources/images/mamont.jpg" alt="mamont">
+                    <h3>Сет "Мамонт"</h3>
+                    <div class="city-future">
+                        Цена: 1400 руб.
+                    </div>
+                    <div class="city-future">
+                        Саке темпура 10 шт.<br>Цезарь темпура 10 шт.<br>Филадельфия 10 шт.<br>Пепперони.<br>4 сезона.<br>Фри.<br>Крылышки 10шт.<br>
+                    </div>
+                </div>
+                <div class="col span-1-of-4 box">
+                    <img src="resources/images/hit.jpg" alt="hit">
+                    <h3>Сет "Хитовый"</h3>
+                    <div class="city-future">
+                        Цена: 900 руб.
+                    </div>
+                    <div class="city-future">
+                        Калифорния 10 шт.<br>Цезарь 20 шт.<br>Филадельфия 10 шт.<br>Пепперони.<br>Маргарита.<br>
+                    </div>
+                </div>
+                <div class="col span-1-of-4 box">
+                    <img src="resources/images/zolot.jpg" alt="zolot">
+                    <h3>Сет "Золотой"</h3>
+                    <div class="city-future">
+                        Цена: 800 руб.
+                    </div>
+                    <div class="city-future">
+                        Калифорния 10 шт.<br>Бонита 10 шт.<br>Филадельфия 10 шт.<br>Филагриль 10 шт.<br>
+                    </div>
+                </div>
+                <div class="col span-1-of-4 box">
+                    <img src="resources/images/pana.jpg" alt="pana">
+                    <h3>Сет "Понаехали"</h3>
+                    <div class="city-future">
+                        Цена: 1200 руб.
+                    </div>
+                    <div class="city-future">
+                        Цезарь 20 шт.<br>Калифорния запеченка 10 шт.<br>Филадельфия 10 шт.<br>Пепперони.<br>Фри.<br>Крылышки 5шт.<br>
+                    </div>
+                </div>
             </div>
         </section>
         
-        <section class="section-cities" id="cities">
+        <section class="section-cities" id="adres">
             <div class="row">
                 <h2>Где мы находимся?</h2>
             </div>
